# weGoNice-api-rust

./: Cargo.toml  README.md
deployment/: docker-compose.yml
src/: main.rs
src/api/: user_api.rs
src/database/: database.rs  mod.rs  users_client.rs
src/models/: user_model.rs
src/repository/: mongo_repo.rs
src/utils/: types.rs
