[package]
name = "wegonice-api-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = "1.0.136"
dotenv = "0.15.0"
mongodb = "2.5.0"
tokio-stream = "0.1.14"
tokio = { version = "1.28.2", features = ["full"]}
